[Mac] Update browser actions container on frame resize

Currently, if the user has more browser actions than can fit in the
minimum width of the container and they refresh with the browser window
at minimum size, expanding the window doesn't restore overflow actions
to the expanded container.

This change ensures that the container recalculates which buttons
should be visible on frame change.

Bug: 746944
Change-Id: I7c149da1ef268955142311dada4720af87ffc98f